Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p>Documentation: <a href="html/index.html">HTML</a>, <a href="hypoct.pdf">PDF</a></p>
+      <p>Documentation: <a href="doc/html/index.html">HTML</a>, <a href="doc/hypoct.pdf">PDF</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/klho/hypoct">Hypoct</a> is maintained by <a href="https://github.com/klho">klho</a>.</span>
