--- a/index.html
+++ b/index.html
@@ -19,7 +19,31 @@
     </section>
 
     <section class="main-content">
-      <p>Documentation: <a href="doc/html/index.html">HTML</a>, <a href="doc/hypoct.pdf">PDF</a></p>
+      <h1>
+<a id="hypoct" class="anchor" href="#hypoct" aria-hidden="true"><span class="octicon octicon-link"></span></a>hypoct</h1>
+
+<p>A hyperoctree is a geometrical tree data structure where each node is recursively subdivided into orthants. It is a multidimensional generalization of the binary tree in 1D, the quadtree in 2D, and the octree in 3D.</p>
+
+<p>hypoct contains routines for constructing and manipulating point hyperoctrees. Its primary purpose is to support fast tree-based algorithms such as the fast multipole method. In this context, it provides an efficient hierarchical indexing scheme as well as encodes all near- and far-field information via neighbor and interaction lists.</p>
+
+<p>Special features include:</p>
+
+<ul>
+<li><p>Compatibility with general elements by associating with each point a size. The effect of working with elements is that point distributions are no longer strictly contained within each node but can extend slightly beyond it. Elements are assigned to nodes that are at least four times their size and have a modified "two over" neighbor definition in order to fully capture the near field.</p></li>
+<li><p>Optimizations for non-uniform and high-dimensional data such as adaptive subdivision and pruning of empty leaves. In particular, short dimensions are not bisected in order to keep nodes as hypercubic as possible.</p></li>
+<li><p>Support for periodic domains.</p></li>
+<li><p>Support for "sparse elements" suitable for finite element computations. Sparse elements interact only by overlap and are assigned to nodes that are at least twice their size. The usual "one over" neighbor definition then suffices to capture all external interactions.</p></li>
+</ul>
+
+<p>hypoct is written in Fortran with wrappers in C and Python. It is freely available under the GNU GPLv3; for alternate licenses, please contact the author.</p>
+
+<h2>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
+
+<ul>
+<li><a href="doc/html/index.html">HTML</a></li>
+<li><a href="doc/hypoct.pdf">PDF</a></li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/klho/hypoct">Hypoct</a> is maintained by <a href="https://github.com/klho">klho</a>.</span>
